tests/snapshots/test_format__constants.snap
---
source: src/format.rs
expression: "fmt(indoc!\n{\n    r#\"\n            TRUE\n            FALSE\n            NULL\n            Inf\n            NaN\n            NA\n            NA_real_\n            NA_character_\n            NA_complex_\n        \"#\n})"
---
TRUE
FALSE
NULL
Inf
NaN
NA
NA_real_
NA_character_
NA_complex_
