tests/snapshots/test_format__dot_dot_i.snap
---
source: src/format.rs
expression: "fmt(indoc! { r#\"\n            ..1\n            ..10\n        \"# })"
---
..1
..10
