tests/snapshots/test_format__extract_operator-2.snap
---
source: src/format.rs
expression: "fmt(indoc! { r#\"\n            ( foo+ bar )@baz\n        \"# })"
---
(foo + bar)@baz
