tests/snapshots/test_format__extract_operator-4.snap
---
source: tests/test_format.rs
expression: "format_str(indoc! { r#\"\n    \tlhs$ # 1\n            rhs # 2\n    \"# }).unwrap()"
---
lhs$ # 1
  rhs # 2
