tests/snapshots/test_format__fmt_skip-2.snap
---
source: src/format.rs
expression: "format_str(indoc!\n{\n    r#\"\n            foo <- c(1,2,\n            3)# fmt: skip\n            bar <- c(1,2,\n            3)\n        \"#\n}).unwrap()"
---
foo <- c(1,2,
3) # fmt: skip
bar <- c(
  1,
  2,
  3
)
