tests/snapshots/test_format__fmt_skip.snap
---
source: src/format.rs
expression: "format_str(indoc!\n{\n    r#\"\n        \t# fmt: skip\n            foo <- c(1,2,\n            3)\n        \"#\n}).unwrap()"
---
# fmt: skip
foo <- c(1,2,
   3)
