tests/snapshots/test_format__for_statement-2.snap
---
source: tests/test_format.rs
expression: "format_str(indoc!\n{ r#\"\n        for (x in foo(\n        bar)) baz\n    \"# }).unwrap()"
---
for (
  x in foo(
    bar
  )
) {
  baz
}
