tests/snapshots/test_format__for_statement-3.snap
---
source: tests/test_format.rs
expression: "format_str(indoc!\n{\n    r#\"\n        for (x in foo( bar)) { baz }\n        for (x in\n        foo( bar)) { baz }\n    \"#\n}).unwrap()"
---
for (x in foo(bar)) {
  baz
}
for (
  x
  in foo(bar)
) {
  baz
}
