tests/snapshots/test_format__for_statement-5.snap
---
source: tests/test_format.rs
expression: "format_str(indoc!\n{\n    r#\"\n        for\n        # 1\n        ( # (\n            # 2\n            variable # variable\n            # 3\n            in\n            # 4\n            sequence # sequence\n            # 5\n        ) # )\n        # 6\n        {\n            body\n        }\n    \"#\n}).unwrap()"
---
for
# 1
( # (
  # 2
  variable # variable
  # 3
  in
  # 4
  sequence # sequence
  # 5
) # )
# 6
{
  body
}
