tests/snapshots/test_format__for_statement-6.snap
---
source: tests/test_format.rs
expression: "format_str(indoc!\n{\n    r#\"\n        for (\n        variable\n        # 1\n        in {\n            sequence\n        }) {}\n\n        for (\n        variable\n        in\n        # 2\n        {\n            sequence\n        }) {}\n        \"#\n}).unwrap()"
---
for (
  variable
  # 1
  in {
    sequence
  }
) {}

for (
  variable
  in
  # 2
  {
    sequence
  }
) {}
