tests/snapshots/test_format__for_statement-7.snap
---
source: tests/test_format.rs
expression: "format_str(indoc!\n{\n    r#\"\n        for (variable in sequence) # 1\n            body\n        \"#\n}).unwrap()"
---
for (variable in sequence) # 1
{
  body
}
